Closed
Bug 1728985
Opened 4 years ago
Closed 4 years ago
Perma Spidermonkey TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/auto-regress/bug638212.js | <path> TypeError: can't define property "WasmFunction": ShellWindowProxy is not extensible when Gecko 93 merges to Beta on 2021-09-06
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
VERIFIED
FIXED
93 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox-esr91 | --- | unaffected |
| firefox91 | --- | unaffected |
| firefox92 | --- | unaffected |
| firefox93 | + | verified |
People
(Reporter: CrissCozmuta, Assigned: Ms2ger)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[Tracking Requested - why for this release]:
Central-as-beta simulation:
How to run these simulations:
[task 2021-09-03T12:10:03.583Z] TEST-PASS | js/src/jit-test/tests/auto-regress/bug637205.js | Success (code 0, args "--blinterp-eager") [0.0 s]
[task 2021-09-03T12:10:03.608Z] /builds/worker/checkouts/gecko/js/src/jit-test/tests/auto-regress/bug638212.js:8:8 TypeError: can't define property "WasmFunction": ShellWindowProxy is not extensible
[task 2021-09-03T12:10:03.608Z] Stack:
[task 2021-09-03T12:10:03.608Z] @/builds/worker/checkouts/gecko/js/src/jit-test/tests/auto-regress/bug638212.js:8:8
[task 2021-09-03T12:10:03.608Z] @/builds/worker/checkouts/gecko/js/src/jit-test/tests/auto-regress/bug638212.js:9:3
[task 2021-09-03T12:10:03.608Z] Exit code: 3
[task 2021-09-03T12:10:03.609Z] FAIL - auto-regress/bug638212.js
[task 2021-09-03T12:10:03.609Z] TEST-UNEXPECTED-FAIL | js/src/jit-test/tests/auto-regress/bug638212.js | /builds/worker/checkouts/gecko/js/src/jit-test/tests/auto-regress/bug638212.js:8:8 TypeError: can't define property "WasmFunction": ShellWindowProxy is not extensible (code 3, args "--ion-eager --ion-offthread-compile=off --ion-check-range-analysis --ion-extra-checks --no-sse3 --no-threads") [0.0 s]
[task 2021-09-03T12:10:03.609Z] INFO exit-status : 3
[task 2021-09-03T12:10:03.609Z] INFO timed-out : False
[task 2021-09-03T12:10:03.609Z] INFO stderr 2> /builds/worker/checkouts/gecko/js/src/jit-test/tests/auto-regress/bug638212.js:8:8 TypeError: can't define property "WasmFunction": ShellWindowProxy is not extensible
[task 2021-09-03T12:10:03.609Z] INFO stderr 2> Stack:
[task 2021-09-03T12:10:03.609Z] INFO stderr 2> @/builds/worker/checkouts/gecko/js/src/jit-test/tests/auto-regress/bug638212.js:8:8
[task 2021-09-03T12:10:03.609Z] INFO stderr 2> @/builds/worker/checkouts/gecko/js/src/jit-test/tests/auto-regress/bug638212.js:9:3
[task 2021-09-03T12:10:03.611Z] /builds/worker/checkouts/gecko/js/src/jit-test/tests/auto-regress/bug638212.js:8:8 TypeError: can't define property "WasmFunction": ShellWindowProxy is not extensible
[task 2021-09-03T12:10:03.611Z] Stack:
[task 2021-09-03T12:10:03.611Z] @/builds/worker/checkouts/gecko/js/src/jit-test/tests/auto-regress/bug638212.js:8:8
[task 2021-09-03T12:10:03.611Z] @/builds/worker/checkouts/gecko/js/src/jit-test/tests/auto-regress/bug638212.js:9:3
[task 2021-09-03T12:10:03.611Z] Exit code: 3
Affected platforms Linux x64 opt & debug, Windows 2012 x64 opt.
Jessica, can you please take a look at this ?
Flags: needinfo?(jtallon)
| Assignee | ||
Comment 2•4 years ago
|
||
Updated•4 years ago
|
Updated•4 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Comment 12•4 years ago
|
||
Pushed by rhunt@eqrion.net:
https://hg.mozilla.org/integration/autoland/rev/8214bcf14bfa
Only expose WebAssembly.Function if it works; r=rhunt
| Reporter | ||
Comment 13•4 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
Comment 14•4 years ago
|
||
Verified fixed in today's central-as-early-beta simulation.
Status: RESOLVED → VERIFIED
| Comment hidden (Intermittent Failures Robot) |
Updated•4 years ago
|
Keywords: regression
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•