Bug 1728985 - Only expose WebAssembly.Function if it works; r=rhunt

Differential Revision: https://phabricator.services.mozilla.com/D124458